# EZres

./: CMakeLists.txt  LICENSE  README.md  README_EN.md  main.cpp
